// Protoconf - Tableau's data interchange format
// https://tableauio.github.io/

syntax = "proto3";

package tableau;

option go_package = "github.com/tableauio/tableau/proto/tableaupb";

import "tableau/protobuf/tableau.proto";

message Workbook {
  string name = 1; // e.g.: "relative/path/bookname"
  string alias = 2;
  WorkbookOptions options = 3;
  repeated Worksheet worksheets = 4;
  map<string, int32> imports = 5;  // imported proto files
}

message Worksheet {
  string name = 1;
  WorksheetOptions options = 2;
  repeated Field fields = 3;
}

message Field {
  // Field tag number
  // Note: only for enum/struct/union type definition in sheet
  int32 number = 1;
  string name = 2;
  string alias = 3;
  string type = 4;
  string full_type = 5;
  ListEntry list_entry = 6;
  MapEntry map_entry = 7;
  // Indicate this field's related type is predefined.
  // - enum: enum type
  // - struct: message type
  // - list: list's element type
  // - map: map's value type
  bool predefined = 8;
  FieldOptions options = 9;

  // This field can be struct, list or map if sub fields's length is not 0.
  repeated Field fields = 10;

  message ListEntry {
    string elem_type = 1;
    string elem_full_type = 2;
  }
  message MapEntry {
    string key_type = 1;
    string value_type = 2;
    string value_full_type = 3;
  }
}
