// Code generated by tableau (protogen v0.9.0). DO NOT EDIT.
// clang-format off

syntax = "proto3";

package protoconf;

import "common/base.proto";
import "common/common.proto";
import "tableau/protobuf/tableau.proto";

option go_package = "github.com/tableauio/tableau/test/functest/protoconf";
option (tableau.workbook) = {name:"excel/struct/Struct#*.csv" namerow:1 typerow:2 noterow:3 datarow:4 sep:"," subsep:":"};

message CrossCellNamedStruct {
  option (tableau.worksheet) = {name:"CrossCellNamedStruct"};

  Item reward_item = 1 [(tableau.field) = {name:"RewardItem"}];
  message Item {
    int32 id = 1 [(tableau.field) = {name:"ID"}]; // Item ID
    int32 num = 2 [(tableau.field) = {name:"Num"}]; // Item ID
  }
  Item cost_item = 2 [(tableau.field) = {name:"CostItem"}];
  protoconf.Item predefined_item = 3 [(tableau.field) = {name:"PredefinedItem"}];
}

message CrossCellStruct {
  option (tableau.worksheet) = {name:"CrossCellStruct"};

  Property property = 1 [(tableau.field) = {name:"Property"}];
  message Property {
    int32 id = 1 [(tableau.field) = {name:"ID"}]; // Property ID
    string name = 2 [(tableau.field) = {name:"Name"}]; // Property Name
    string desc = 3 [(tableau.field) = {name:"Desc"}]; // Property Description
  }
}

message InCellStruct {
  option (tableau.worksheet) = {name:"InCellStruct"};

  map<int32, Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Item {
    int32 id = 1 [(tableau.field) = {name:"ID"}]; // Item ID
    Property prop = 2 [(tableau.field) = {name:"Prop" span:SPAN_INNER_CELL}]; // Item property
    message Property {
      int32 id = 1 [(tableau.field) = {name:"ID"}];
      string name = 2 [(tableau.field) = {name:"Name"}];
      string desc = 3 [(tableau.field) = {name:"Desc"}];
    }
  }
}

message PredefinedCrossCellStruct {
  option (tableau.worksheet) = {name:"PredefinedCrossCellStruct"};

  map<uint32, Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Item {
    uint32 id = 1 [(tableau.field) = {name:"ID"}]; // Item ID
    base.Property prop = 2 [(tableau.field) = {name:"Prop"}];
  }
}

message PredefinedInCellStruct {
  option (tableau.worksheet) = {name:"PredefinedInCellStruct"};

  map<uint32, Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Item {
    uint32 id = 1 [(tableau.field) = {name:"ID"}]; // Item ID
    base.Property prop = 2 [(tableau.field) = {name:"Prop" span:SPAN_INNER_CELL}]; // Item property
  }
}
